--- a/PRACTICO III/responsive.css
+++ b/PRACTICO III/responsive.css
@@ -19,12 +19,153 @@
     --just-white: #fff;
 }
 *{
-    /*Vamos a utilizarlo para generalizar ciertas cosas*/
+    /* Quitaremos todas las propiedas que vienen por defecto */
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 html{
+    /* esto para poder hacer el uso de rem, cambiando la base que tiene por defecto el 
+    navegador que es una base 16px y la pasaremos a una base 10px ya que sera mas facil
+    calcular el numero de la 16px*62.5% = 10px*/
     font-size: 62.5%;
-    font-family: sans-serif;
+     /* aqui solo pondemos nuestra fuente base, y la otra fuente la usaremos solo en 
+    ciertos elementos especificos*/
+    font-family: 'DM Sans', sans-serif;
+}
+header{
+    /*Por que usa position relative: Lo usa para que nos sea mas fácil posicionar elementos de forma relativa. En este 
+    caso, nos sirve mucho tener al header con position relative para poder ajustar el enlace de “Conoce nuestros planes” 
+    de forma que quede “sobresaliendo” del header. Si le damos a nuestro enlace un position absolute lo podríamos 
+    posicionar de forma relativa al elemento mas cercano que tenga algún tipo de position, en este caso, el header 
+    (con position relative) */
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-width: 320px;
+    height: 255px;
+    text-align: center;
+    align-items: center;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
+
+}
+header figure img{
+    width: 150px;
+    height: 24px;
+    margin-top: 120px;
+    /*La manera de alinear algo en el centro que tenga un display flex
+    es agarrar y colocar un align-self para que se pueda mover al centro*/
+    align-self: center;
+}
+.header-tittle-container{
+    width: 90%;
+    min-width: 248px;
+    max-width: 922px;
+    height: 18px;
+    margin-top: 40px;
+    text-align: center;
+    align-self: center;
+}
+.header-tittle-container h1{
+    /*La propiedad font-weight define cuan negrita está el texto y hay 
+    muchos valores posibles; normal (normal), audaz (bold), más atrevido
+    (bolder), más ligero (lighter), 100, 200, 300, 400, 500, 600, 700, 
+    800, 900 y heredado (inherit).100: Thin, Hairline, Ultra-light, Extra-light, 
+    200: Light, 300: Book, 400: Regular, Normal, Plain, Roman, Standard, 500: Medium,
+    600: Semi-bold, Demi-bold, 700: Bold, 800: Heavy, Black, Extra-bold, 900: Ultra-black, 
+    Extra-black, Ultra-bold, Heavy-black, Fat, Poster 
+    La propiedad  CSS line-height establece la altura de una casilla remarcada por 
+    líneas. Comúnmente se usa para establecer la distancia entre líneas de texto. 
+    A nivel de elementos de bloque, define la altura mínima de las casillas encuadradas 
+    por líneas dentro del elemento.*/
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+
+}
+.header-title-container p{
+    margin-top: 25px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--soft-orange);
+}
+.header-title-container .header-button{
+    position: center;
+    left: calc(50%-11px);
+    top: 270px;
+    display: inline-flex;
+    justify-content: center;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    background-color: var(--off-white);
+    /* Sombra */
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    /*La propiedad border-radius redondea las esquinas del borde del 
+    borde exterior de un elemento. Puede establecer un solo radio para 
+    hacer esquinas circulares o dos radios para hacer esquinas elípticas.border-radius */
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--black);
+}
+.header-button span{
+    display: inline-block;
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url("./assets/icons/down-arrow.svg");
+}
+main {
+    width: 100%;
+    height: 10%;
+    background-color: var(--off-white);
+
+}
+.main-exchange-conteiner{
+    width: 100%;
+    height: auto;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    text-align: center;
+
+
+}
+.header-title-container{
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    margin: 0 auto;
+}
+.main-exchange-container .backgroundimg{
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    background-image: url("./assets/img/Bitcoin.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+.main-exchange-container h2{
+    margin-bottom: 30px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+.main-exchange-container p{
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    color: #757575;
 }
