--- a/PRACTICO III/responsive.css
+++ b/PRACTICO III/responsive.css
@@ -39,13 +39,13 @@ header{
     de forma que quede “sobresaliendo” del header. Si le damos a nuestro enlace un position absolute lo podríamos 
     posicionar de forma relativa al elemento mas cercano que tenga algún tipo de position, en este caso, el header 
     (con position relative) */
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    min-width: 320px;
-    height: 255px;
+    height: 230px;
+    margin-bottom: 25px;
     text-align: center;
     align-items: center;
     background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
@@ -64,7 +64,7 @@ header figure img{
     min-width: 248px;
     max-width: 922px;
     height: 18px;
-    margin-top: 40px;
+    margin-top: 0;
     text-align: center;
     align-self: center;
 }
@@ -123,9 +123,11 @@ header figure img{
     margin-left: 10px;
     background-image: url("./assets/icons/down-arrow.svg");
 }
-main {
+header main {
     width: 100%;
-    height: 10%;
+    height: 18px;
+    margin-top: 25px;
+    margin-bottom: auto;
     background-color: var(--off-white);
 
 }
@@ -168,4 +170,93 @@ main {
     font-weight: 500;
     line-height: 1.6rem;
     color: #757575;
+}
+.main-currency-table{
+    width: 70%;
+    min-width: 235px;
+    max-width: 360px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "inter", sans-serif ;
+}
+.main-currency-table .currency-table-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: bold;
+    line-height: 2.3rem;
+    color: var(--bitcoin-organge);
+}
+.currency-table-container{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+
+}
+.currency-table-container table{
+    width: 100%;
+    height: 100%;
+}
+.currency-table-container td{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
+.currency-table-container .table-top-left{
+    border-radius: 15px 0 0;
+}
+.currency-table-container .table-top-right{
+    border-radius: 0 15px 0 0;
+}
+.currency-table-container .table-bottom-left{
+    border-radius:  0 0 15px;
+}
+.currency-table-container .table-bottom-right{
+    border-radius: 0 0 15px 0;
+}
+.table-right{
+    font-size: 1.4rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #757575;
+}
+ .currency-table-container .down {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("./assets/icons/trending-down.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency-table-container .up {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("./assets/icons/trending-up.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency-table-date{
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 8px;
+}
+.currency-table-date p{
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+    color: var(--warm-black);
 }
