--- a/PRACTICO III/responsive.css
+++ b/PRACTICO III/responsive.css
@@ -128,6 +128,7 @@ main {
     height: auto;
     top: 15px;
     padding: 0;
+    background-color: var(--just-white);
 }
 .main-exchange-conteiner{
     width: 100%;
